fix: UI improve design & contrast

--- a/frontend/app/styles/base/forms.scss
+++ b/frontend/app/styles/base/forms.scss
@@ -13,8 +13,8 @@ form {
 
 label {
 	display: block;
-	padding: 4px 2px;
-	font-size: 0.95rem;
+	padding: 3px 2px;
+	font-size: 1rem;
 	font-weight: 500;
 }
 
