--- a/frontend/app/styles/themes/white.scss
+++ b/frontend/app/styles/themes/white.scss
@@ -29,7 +29,7 @@
 	// -------------------------------------------------------------------------
 	// BORDERS
 	// -------------------------------------------------------------------------
-	--border: #dfe0e5;
+	--border: #d1d3d7;
 	--border-subtle: #dfe0e585;
 	--border-strong: #c4c6d0;
 	--border-focus: var(--accent);
